<resources>
    <string name="app_name">Task</string>
    <string name="status_task_todo">A fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="password_empty">Preencha a senha!</string>
    <string name="email_empty">Preencha seu email!</string>
    <string name="email_empty_register_fragment">Preencha um e-mail válido.</string>
    <string name="password_empty_register_fragment">Preencha uma senha.</string>
    <string name="description_empty_form_task_fragment" />
    <string name="mensagem">Mensagem</string>
    <string name="entendi">Entendi</string>
    <string name="atencao">Atenção</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="descricao">Descrição</string>
    <string name="informe_sua_nova_tarefa">Informe sua nova Tarefa</string>
    <string name="status">Status</string>
    <string name="a_fazer">A Fazer</string>
    <string name="fazendo">Fazendo</string>
    <string name="feita">Feita</string>
    <string name="salvar">Salvar</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="recuperar_conta">Recuperar Conta</string>
    <string name="nome">Yan Ishiyama Santos</string>
    <string name="informe_seu_e_mail_de_cadastro_para_receber_n_um_link_para_altera_o_de_senha">Informe seu e-mail de cadastro para receber \n um link para alteração de senha.</string>
    <string name="e_mail">E-mail</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="enviar">Enviar</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="add_task">Add task</string>
    <string name="anterior">Anterior</string>
    <string name="proximo">Próximo</string>
</resources>