<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormTaskFragment"

    android:padding="20dp"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nova_tarefa"
            android:textColor="@color/white"
             />

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/descricao"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        style="@style/EditTextTheme"
        android:hint="@string/informe_sua_nova_tarefa"
        />
    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/status"
        android:textColor="@color/white"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        >
        <RadioButton
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:id="@+id/rbTodo"
            android:text="@string/a_fazer"
            android:checked="true"
            app:theme="@style/MyRadioButton"
            android:textColor="@color/white"/>
        <RadioButton
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:id="@+id/rbDoing"
            android:text="@string/fazendo"
            app:theme="@style/MyRadioButton"
            android:textColor="@color/white"/>
        <RadioButton
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:id="@+id/rbDone"
            android:text="@string/feita"
            app:theme="@style/MyRadioButton"
            android:textColor="@color/white"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:backgroundTint="@color/white"
        app:cornerRadius="5dp"
        android:text="@string/salvar"
        style="@style/ButtonTheme"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/white"
        android:visibility="invisible"
        tools:visibility="visible"
        />

</LinearLayout>

</ScrollView>