<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textviewTitle"
        android:textAlignment="center"
        android:textColor="@color/color_default"
        android:text="@string/atencao" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?actionBarDivider"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textviewMessage"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/mensagem" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonOk"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn"
        android:text="@string/entendi"
        android:textColor="@color/white"
        android:backgroundTint="@color/color_default" />

</LinearLayout>