<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.auth.RecoverAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recuperar_conta"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"/>
        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewMensagem"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                android:text="@string/informe_seu_e_mail_de_cadastro_para_receber_n_um_link_para_altera_o_de_senha"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/digite_seu_e_mail"
                android:id="@+id/digiteEmail"
                android:inputType="textEmailAddress"
                style="@style/EditTextTheme"
                android:layout_marginTop="4dp"
                />


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                android:id="@+id/btnRegistrar"
                app:backgroundTint="@null"
                style="@style/ButtonTheme"
                android:layout_marginTop="16dp"
                />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>