<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment"
    android:background="@color/color_default">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E-mail"
        android:textColor="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Digite seu e-mail"
        android:inputType="textEmailAddress"
        style="@style/EditTextTheme"
        android:layout_marginTop="4dp"
        android:id="@+id/digiteEmail"></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Senha"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textPassword"
        android:hint="Digite sua senha"
        style="@style/EditTextTheme"
        android:id="@+id/digiteSenha"
        android:layout_marginTop="4dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        app:backgroundTint="@null"
        style="@style/ButtonTheme"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criar_conta"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/btnRecover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperar_conta"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"/>
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:layout_gravity="center"
        tools:visibility="visible"
        android:visibility="invisible"/>
    </LinearLayout>

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>